# SFxxCGAL

./: .gitignore  CMakeLists.txt  cppbuild.sh  pom.xml
cmake/Modules/: FindCGAL.cmake  FindGMP.cmake  FindSIDX.cmake  FindSTXXL.cmake
src/native/: .gitignore  CMakeCache.txt  CMakeLists.txt  Makefile  SFCGAL4J.cbp  cmake_install.cmake  main.cpp  run.sh
src/native/cpp/: SFAlgorithm.cpp  SFAlgorithm.h  SFCAPI.cpp  SFCAPI.h  SFCoordinate.cpp  SFCoordinate.h  SFEnvelope.cpp  SFEnvelope.h  SFGeometry.cpp  SFGeometry.h  SFGeometryCollection.cpp  SFGeometryCollection.h  SFLineString.cpp  SFLineString.h  SFMultiPolygon.h  SFPoint.cpp  SFPoint.h  SFPolygon.cpp  SFPolygon.h  SFPolyhedralSurface.h  SFPreparedGeometry.h  SFSolid.cpp  SFSolid.h  SFSurface.cpp  SFSurface.h  SFTriangulatedSurface.h
src/native/examples/: CMakeLists.txt  Makefile  cmake_install.cmake
src/native/examples/sfxxcgal/: CMakeLists.txt
src/native/examples/sidx/: CMakeLists.txt  crtree.cpp
src/native/examples/stxxl/: CMakeLists.txt  Makefile  cmake_install.cmake  vector1  vector1.cpp
src/native/include/: Experiments.hpp  SFXBoundingBox.cpp  SFXBoundingBox.hpp  SFXRandomGenerator.hpp  SFXStorageManager.h
